# CoffeeShopFinderBE

./: .gitignore  README.md  dump.rdb  pyproject.toml
app/: db.sqlite3
app/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/api/migrations/: 0001_initial.py  0002_auto_20210627_2030.py
app/app/: settings.py  urls.py
