[tool.poetry]
name = "coffeeshopfinderbe"
version = "0.1.0"
description = "Backend Coffee Shop Finder App"
authors = ["Kris Litman <kris.d.litman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
